# useget

./: .flake8  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  debug_search.py  gui.py  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  python-app.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
clients/: jellyfin_client.py  nzbgeek_client.py  sabnzbd_client.py  test_jellyfin_client.py  test_nzbgeek_client.py  test_sabnzbd_client.py  test_sabnzbd_history.py
config/: config.yaml  config_loader.py
filters/: filter_engine.py  scene_parser.py  test_filter_engine.py  test_scene_parser.py  test_title_matching.py
notify/: notifier.py  test_notifier.py
postprocess/: post_processor.py  test_post_processor.py
tests/: README.md
useget/: README.md  __init__.py  cli.py  config_loader.py  debug_search.py  gui.py  main.py
useget/clients/: __init__.py  jellyfin_client.py  nzbgeek_client.py  sabnzbd_client.py  test_jellyfin_client.py  test_nzbgeek_client.py  test_sabnzbd_client.py  test_sabnzbd_history.py
useget/filters/: __init__.py  filter_engine.py  scene_parser.py  test_filter_engine.py  test_scene_parser.py  test_title_matching.py
useget/notify/: __init__.py  notifier.py  test_notifier.py
useget/postprocess/: __init__.py  post_processor.py  test_post_processor.py
useget/postprocess/plugins/: example_plugin.py
useget/utils/: __init__.py
utils/: __init__.py
