[metadata]
name = useget
version = 0.1.0
description = Usenet automation and media downloader
long_description = file: README.md
long_description_content_type = text/markdown
author = Korab
license = MIT

[options]
packages = find:
install_requires =
    requests
    PyQt5
    pyyaml
    apscheduler
